src/components/header.module.scss
@import '../styles/global';

.container {
    max-width: $site-width;
    min-height: 140px;
    margin: 0 auto;
    padding-top: 30px;
    margin-top: 5px;

    .row {
      text-align: center;
      padding: 10px;
    }

    .button {
      background-color: $color-pallete-1;
        display: inline-block;
        font-size: 12px;
        text-transform: uppercase;
        color: white;
        font-weight: bold;
        height: 30px;
        min-width: 15px;
        line-height: 30px;
        padding-left: 10px;
        margin-right: 10px;
        padding-right: 10px;
        margin-bottom: 10px;
        margin-top: 25px;
        border-radius: 50%;

        &:hover {
            background-color: $color-pallete-2;
        }

    }

    .button-icon {
        @extend .button;
        background-size: 16px 16px;
        background-repeat: no-repeat;
        background-position: center center;
    }

    .button-github {
        @extend .button-icon;
        background-image: url('../images/github.png');

    }

    .button-twitter {
        @extend .button-icon;
        background-image: url('../images/twitter.png');
    }

    .button-linkedin {
        @extend .button-icon;
        background-image: url('../images/linkedin.png');
    }

    .button-instagram {
        @extend .button-icon;
        background-image: url('../images/instagram.png');
    }

    

    .link {
        color: $color-pallete-1;
        text-transform: uppercase;
        font-family: 'Raleway', sans-serif;
        font-size: 24px;
        font-weight: bold;
        text-decoration: none;

        &:hover {
            color: $color-pallete-2;
        }

        &:not(:last-child) {
            padding-right: 30px;
        }

    }

    .link-home {
        @extend .link;
        font-size: 60px;
        line-height: 60px;
    }

}

